# aral-ui

./: .gitignore  README.md  proposed_feature_list.md  pyproject.toml
aral/ui/: build.py  server.py
aral/ui/frontend/: bun.lockb  package.json
aral/ui/frontend/lib/: api.ts
data/: message_store.json
data/conversations/: e124cb09-6fb5-48c3-81cd-3690bf618256.json
examples/: README.md  claude_agent.py  persistence_example.py  simple_agent.py  test.py  tool_updates_agent.py
src/aral/: __init__.py  agent.py
src/aral/storage/: README.md  __init__.py  message_store.py  persistence.py  persistent_store.py
src/aral/ui/: build.py  server.py
src/aral/ui/frontend/: bun.lockb  next.config.js  package.json
src/aral/ui/frontend/app/: globals.css  layout.tsx  page.tsx
src/aral/ui/frontend/app/conversation/: layout.tsx
src/aral/ui/frontend/app/conversation/[id]/: Gradient.tsx  component.tsx  page.tsx
src/aral/ui/frontend/components/ui/: conversation-flow.tsx  gradient-bubble.tsx  loading-dots.tsx  message-input.tsx  message.tsx  sidebar.tsx  theme-settings.tsx  tool-update.tsx  tool-updates.tsx
src/aral/ui/frontend/lib/: api.ts  websocket-context.tsx
src/aral/ui/frontend/providers/: theme-provider.tsx
tests/aral/: __init__.py
tests/aral/storage/: __init__.py  test_persistence.py
