[project]
name = "aral"
version = "0.1.0"
description = "One-Line Agent Deployment Framework"
authors = [
    { name = "Zen T", email = "ztang230@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aral"]

[tool.setuptools.package-data]
aral = ["ui/frontend/.next/**/*", "ui/frontend/public/**/*"]

[project.scripts]
aral-build-ui = "aral.ui.build:main"
